Modificações layout, quase final

--- a/contato.html
+++ b/contato.html
@@ -26,59 +26,42 @@
   
   <!-- INICIO Header -->
   <header class="site-header">
-    <div class="top-header hidden-xs">
+    <!-- <div class="top-header hidden-xs">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-sm-6">
+          <div class="col-md-8 col-sm-6">
             <ul class="horiz-nav pull-left">
-              <li class="dropdown"><a data-toggle="dropdown"><i class="fa fa-user"></i> Entrar <b class="caret"></b></a>
+                  <li><a href="https://www.facebook.com/artolex.corretora" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://twitter.com/artolex.corretora" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              </ul>
+            </div>
+
+          <div class="col-md-4 col-sm-6">
+            
+            <ul class="horiz-nav pull-right">
+              <li><a href="login.html">Cadastrar</a></li>
+              <li class="dropdown"><a data-toggle="dropdown">Minha Conta <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="minhas-propriedades.html">Minhas Propriedades</a></li>
                   <li><a href="adicionar-imovel.html">Adicionar Propriedade</a></li>
                   <li><a href="editar-conta.html">Minha Conta</a></li>
                 </ul>
               </li>
-              <li><a href="login.html"><i class="fa fa-check-circle"></i> Cadastrar</a></li>
               </ul>
           </div>
-          <div class="col-md-8 col-sm-6">
-            <ul class="horiz-nav pull-right">
-                  <li><a href="https://www.facebook.com/artolex.corretora" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="https://twitter.com/artolex.corretora" target="_blank"><i class="fa fa-twitter"></i></a></li>
-              </ul>
-            </div>
+         
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="middle-header">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-sm-8 col-xs-8">
+          <div class="col-md-2 col-sm-6 col-xs-6">
             <h1 class="logo"> <a href="index.html"><img src="images/logo.png" alt="Logo" width="165"></a> </h1>
           </div>
-          <div class="col-md-8 col-sm-4 col-xs-4">
-              <div class="contact-info-blocks hidden-sm hidden-xs">
-                  <div>
-                      <i class="fa fa-phone"></i> Telefone
-                    <span>+55 (32) 3531-7544</span>
-                </div>
-                  <div>
-                      <i class="fa fa-envelope"></i> Email
-                    <span><a target="_blank" style="text-decoration:none" href="mailto:contato@artolex.com.br">contato@artolex.com.br</a></span>
-                </div>
-                  <div>
-                      <i class="fa fa-clock-o"></i> Horário de Funcionamento
-                    <span>09:00 às 18:00</span>
-                </div>
-             </div>
-              <a href="#" class="visible-sm visible-xs menu-toggle"><i class="fa fa-bars"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="col-md-10 col-sm-8 col-xs-8" style="margin-top: 13px;">
     <div class="main-menu-wrapper">
-      <div class="container">
-        <div class="row">
+        <div class="row" style="float: right;">
           <div class="col-md-12">
             <nav class="navigation">
               <ul class="sf-menu">
@@ -86,16 +69,27 @@
                 <li><a href="empresa.html">Empresa</a></li>
                 <li><a href="propriedades-simples-list.html">Venda</a></li>
                 <li><a href="propriedades-simples-list.html">Locação</a></li>
-                <li><a href="login.html">Área do Cliente</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="login.html">Cadastrar</a></li>
+                <li class="dropdown"><a data-toggle="dropdown">Conta</a>
+                  <ul class="dropdown-menu">
+                    <li><a href="minhas-propriedades.html">Minhas Propriedades</a></li>
+                    <li><a href="adicionar-imovel.html">Adicionar Propriedade</a></li>
+                    <li><a href="editar-conta.html">Editar Minha Conta</a></li>
+                  </ul>
+              </li>
               </ul>
             </nav>
           </div>
         </div>
+    </div>
+</div>
+        </div>
       </div>
     </div>
-  </header>
 
+  </header>
+  
   <div class="site-showcase"> 
     <!-- Start Page Header -->
     <div class="parallax page-header" id="contact-map">
@@ -151,52 +145,78 @@
   </div>
 
   <footer class="site-footer">
-      <div class="container">
+    <div class="container">
+      <div class="row">
+       <div class="col-md-12 col-sm-12 latest-testimonials column">
+              <h3>Opniões</h3>
+            <ul class="testimonials">
+              <li>
+                      <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                  <img src="images/agentes.jpg" alt="Opnião do Cliente" class="testimonial-sender">
+                      <cite>Marinho - <strong>Embradic</strong>
+                      <br><a href="#">www.embradic.com</a>
+                   </cite>
+                </li>
+            </ul> 
+        </div>
+    </div>
+      </div>
+      <br />
+      <br />
+      <div class="container" style="box-shadow: inset 0 2px 0 0px rgba(0,0,0,.07);">
+      <br />
+      <br />
           <div class="row">
             <div class="col-md-3 col-sm-6 footer-widget widget">
-                <h3 class="widgettitle">LINKS</h3>
+                <h3 class="widgettitle">Lorem</h3>
+               <p>
+                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel
+                 orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel
+                 orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel
+               </p>
+           </div>
+
+            <div class="col-md-6 col-sm-10 footer-widget widget">
+                <h3 class="widgettitle">Contato</h3>
+               <p>
+                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel
+                 orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel
+                 orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra ante luctus vel
+               </p>
+
+               <div class="col-md-10 col-sm-4 col-xs-4">
+              <div class="contact-info-blocks hidden-sm hidden-xs">
+                  <div>
+                      <i class="fa fa-phone"></i>
+                    <span>+55 (32) 3531-7544</span>
+                </div>
+                  <div>
+                      <i class="fa fa-envelope"></i>
+                    <span><a target="_blank" style="text-decoration:none" href="mailto:contato@artolex.com.br">contato@artolex.com.br</a></span>
+                </div>
+                <br />
+                  <div>
+                      <i class="fa fa-clock-o"></i>
+                    <span>09:00 às 18:00</span>
+                </div>
+             </div>
+              <a href="#" class="visible-sm visible-xs menu-toggle"><i class="fa fa-bars"></i></a>
+          </div>
+
+           </div>
+
+              <div class="col-md-3 col-sm-6 footer-widget widget">
+                <h3 class="widgettitle">ITEMS</h3>
                <ul>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
+                <li><a href="">Item</a></li>
+                <li><a href="">Item</a></li>
+                <li><a href="">Item</a></li>
+                <li><a href="">Item</a></li>
+                <li><a href="">Item</a></li>
+                <li><a href="">Item</a></li>
                </ul>
            </div>
 
-            <div class="col-md-3 col-sm-6 footer-widget widget">
-                <h3 class="widgettitle">LINKS</h3>
-               <ul>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-               </ul>
-           </div>
-
-  
-            <div class="col-md-3 col-sm-6 footer-widget widget">
-                <h3 class="widgettitle">LINKS</h3>
-               <ul>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-               </ul>
-           </div>
-
-            <div class="col-md-3 col-sm-6 footer-widget widget">
-                <h3 class="widgettitle">LINKS</h3>
-               <ul>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-               </ul>
-           </div>
        </div>
    </div>
   </footer>
