--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
                               <span class="label label-success col-md-12">R$ 1.500</span>
                       </div>
                       <div class="property-amenities clearfix">
-                              <span class="area"><strong>5000</strong><i class="icon-sqft"></i></span></span>
-                              <span class="baths"><strong>3</strong><i class="icon-bath"></i></span>
-                              <span class="beds"><strong>2</strong><i class="icon-bed"></i></span>
- <span class="parking"><strong>1</strong><i class="icon-garage"></i></span>
+                              <span class="area"  data-toggle="tooltip" data-placement="bottom" title="Área."><strong>5000</strong><i class="icon-sqft"></i></span></span>
+                              <span class="baths" data-toggle="tooltip" data-placement="bottom" title="Banheiros"><strong>3</strong><i class="icon-bath"></i></span>
+                              <span class="beds" data-toggle="tooltip" data-placement="bottom" title="Quartos"><strong>2</strong><i class="icon-bed"></i></span>
+ <span class="parking" data-toggle="tooltip" data-placement="bottom" title="Vagas garagem"><strong>1</strong><i class="icon-garage"></i></span>
                           </div>
                       </div>
                 </li>
@@ -298,10 +298,10 @@
                               <span class="label label-success col-md-12">R$ 1.500</span>
                       </div>
                       <div class="property-amenities clearfix">
-                              <span class="area"><strong>5000</strong><i class="icon-sqft"></i></span>
-                              <span class="baths"><strong>3</strong><i class="icon-bath"></i></span>
-                              <span class="beds"><strong>2</strong><i class="icon-bed"></i></span>
-                               <span class="parking"><strong>1</strong><i class="icon-garage"></i></span>
+                              <span class="area"  data-toggle="tooltip" data-placement="bottom" title="Área."><strong>5000</strong><i class="icon-sqft"></i></span>
+                              <span class="baths" data-toggle="tooltip" data-placement="bottom" title="Banheiros"><strong>3</strong><i class="icon-bath"></i></span>
+                              <span class="beds" data-toggle="tooltip" data-placement="bottom" title="Quartos"><strong>2</strong><i class="icon-bed"></i></span>
+                               <span class="parking" data-toggle="tooltip" data-placement="bottom" title="Vagas garagem"><strong>1</strong><i class="icon-garage"></i></span>
                           </div>
                       </div>
                 </li>
@@ -320,9 +320,9 @@
                       </div>
                       <div class="property-amenities clearfix">
                               <span class="area"><strong>600m2</strong><i class="icon-sqft"></i></span>
-                              <span class="baths"><strong>3</strong><i class="icon-bath"></i></span>
-                              <span class="beds"><strong>2</strong><i class="icon-bed"></i></span>
-                               <span class="parking"><strong>1</strong><i class="icon-garage"></i></span>
+                              <span class="baths" data-toggle="tooltip" data-placement="bottom" title="Banheiros"><strong>3</strong><i class="icon-bath"></i></span>
+                              <span class="beds" data-toggle="tooltip" data-placement="bottom" title="Quartos"><strong>2</strong><i class="icon-bed"></i></span>
+                               <span class="parking" data-toggle="tooltip" data-placement="bottom" title="Vagas garagem"><strong>1</strong><i class="icon-garage"></i></span>
                           </div>
                       </div>
                 </li>
@@ -340,10 +340,10 @@
                               <span class="label label-success col-md-12">R$ 1.500</span>
                       </div>
                       <div class="property-amenities clearfix">
-                              <span class="area"><strong>5000</strong><i class="icon-sqft"></i></span>
-                              <span class="baths"><strong>3</strong><i class="icon-bath"></i></span>
-                              <span class="beds"><strong>2</strong><i class="icon-bed"></i></span>
-                               <span class="parking"><strong>1</strong><i class="icon-garage"></i></span>
+                              <span class="area"  data-toggle="tooltip" data-placement="bottom" title="Área."><strong>5000</strong><i class="icon-sqft"></i></span>
+                              <span class="baths" data-toggle="tooltip" data-placement="bottom" title="Banheiros"><strong>3</strong><i class="icon-bath"></i></span>
+                              <span class="beds" data-toggle="tooltip" data-placement="bottom" title="Quartos"><strong>2</strong><i class="icon-bed"></i></span>
+                               <span class="parking" data-toggle="tooltip" data-placement="bottom" title="Vagas garagem"><strong>1</strong><i class="icon-garage"></i></span>
                           </div>
                       </div>
                 </li>
@@ -361,10 +361,10 @@
                               <span class="label label-success col-md-12">R$ 1.500</span>
                       </div>
                       <div class="property-amenities clearfix">
-                              <span class="area"><strong>5000</strong><i class="icon-sqft"></i></span>
-                              <span class="baths"><strong>3</strong><i class="icon-bath"></i></span>
-                              <span class="beds"><strong>2</strong><i class="icon-bed"></i></span>
-                               <span class="parking"><strong>1</strong><i class="icon-garage"></i></span>
+                              <span class="area"  data-toggle="tooltip" data-placement="bottom" title="Área."><strong>5000</strong><i class="icon-sqft"></i></span>
+                              <span class="baths" data-toggle="tooltip" data-placement="bottom" title="Banheiros"><strong>3</strong><i class="icon-bath"></i></span>
+                              <span class="beds" data-toggle="tooltip" data-placement="bottom" title="Quartos"><strong>2</strong><i class="icon-bed"></i></span>
+                               <span class="parking" data-toggle="tooltip" data-placement="bottom" title="Vagas garagem"><strong>1</strong><i class="icon-garage"></i></span>
                           </div>
                       </div>
                 </li>
@@ -382,10 +382,10 @@
                               <span class="label label-success col-md-12">R$ 1.500</span>
                       </div>
                       <div class="property-amenities clearfix">
-                              <span class="area"><strong>5000</strong><i class="icon-sqft"></i></span>
-                              <span class="baths"><strong>3</strong><i class="icon-bath"></i></span>
-                              <span class="beds"><strong>2</strong><i class="icon-bed"></i></span>
-                               <span class="parking"><strong>1</strong><i class="icon-garage"></i></span>
+                              <span class="area"  data-toggle="tooltip" data-placement="bottom" title="Área."><strong>5000</strong><i class="icon-sqft"></i></span>
+                              <span class="baths" data-toggle="tooltip" data-placement="bottom" title="Banheiros"><strong>3</strong><i class="icon-bath"></i></span>
+                              <span class="beds" data-toggle="tooltip" data-placement="bottom" title="Quartos"><strong>2</strong><i class="icon-bed"></i></span>
+                               <span class="parking" data-toggle="tooltip" data-placement="bottom" title="Vagas garagem"><strong>1</strong><i class="icon-garage"></i></span>
                           </div>
                       </div>
                 </li>
